# auth-with-flask-and-jwt

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  config.py
app/extensions/: ioc_container.py
app/extensions/utils/: time_helper.py
app/http/requests/auth/v1/: auth_request.py
app/http/requests/user/v1/: user_request.py
app/http/responses/: __init__.py
app/http/responses/presenters/: auth_presenter.py  user_presenter.py
app/http/view/: __init__.py
app/http/view/auth/: __init__.py
app/http/view/auth/v1/: auth_view.py
app/http/view/user/v1/: user_view.py
app/persistence/model/: auth_model.py  user_model.py
core/: exceptions.py
core/domains/auth/dto/: auth_dto.py
core/domains/auth/entity/: auth_entity.py
core/domains/auth/enum/: auth_enum.py
core/domains/auth/use_case/: create_auth_use_case.py  verify_auth_use_case.py
core/domains/user/dto/: user_dto.py
core/domains/user/entity/: user_entity.py
core/domains/user/repository/: auth_repository.py  user_repository.py
core/domains/user/schema/: user_schema.py
core/domains/user/use_case/: signin_use_case.py  signup_use_case.py  update_user_use_case.py
core/use_case_output/: __init__.py
migrations/: env.py
migrations/versions/: 6524c56c03f2_create_users_and_auths_tables.py  9a18a70c5eec_create_users_and_auths_tables.py  add7a836fa2f_create_users_and_auths_tables.py  bb696523bcb7_create_users_and_auths_tables.py  cb6b7b529969_create_users_and_auths_tables.py
test/: conftest.py
test/core/domains/user/repository/: test_user_repository.py
tests/app/: conftest.py
(+10 files in other folders)
